@@ -7,12 +7,12 @@ import java.util.concurrent.Executors;
 
 public class TesteMultiplasThreads {
     public static void main(String[] args) {
-        ExecutorService executor = Executors.newFixedThreadPool(50000);
+        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
 
         Instant inicio = Instant.now();
 
         try (ExecutorService e = executor){
-            for (int i = 1; i<=50000; i++){
+            for (int i = 1; i<=100000; i++){
                 var tarefa = new ExecutaTarefa();
                 e.execute(tarefa);
             }
@@ -21,6 +21,6 @@ public class TesteMultiplasThreads {
         Instant fim = Instant.now();
 
         Duration duracao = Duration.between(inicio, fim);
-        System.out.println("Tempo gastto pelas tarefas: " + duracao.getSeconds());
+        System.out.println("Tempo gasto pelas tarefas: " + duracao.getSeconds());
     }
 }
